--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,7 +6,7 @@
     align-items: center;
     height: 60px;
     width: 100%;
-    background-color: white;
+    background-color: rgb(166, 193, 243);
 }
 
 .header-bar-left{
